# oc-stackoverflow-api

./: .gitignore  ISAKOV_Kiril_1_notebook_Exploration+NLTK+Non_supervisé_LDA_062025.ipynb  ISAKOV_Kiril_2_notebook_Supervise_MLOps_062025.ipynb  ISAKOV_Kiril_2_notebook_Supervisé_062025.ipynb  ISAKOV_Kiril_3_notebook_API_062025.ipynb  ISAKOV_Kiril_3_notebook_API_Prediction_depl_sur_Azur_062025.ipynb  Note technique.md  README.md  api_server.py  app.py  local_server.py  main.py  pyproject.toml  requests.ipynb  requirements.txt  test_local_server.py  test_main.py
.github/workflows/: main_oc-stackoverflow-api-1.yml
data/: so.2024.12.csv
models/: mlb.pkl  mlb_100000.pkl  model.pkl  vectorizer_TfidfVectorizer_100000.pkl  vectorizer_filtered.pkl
