[project]
name = "oc-stackoverflow-api"
version = "0.1.0"
description = "L'API HTTP sous FastAPI pour mon projet OpenClassrooms «Étiquetage des questions Stackoverflow»"
authors = [
    {name = "Kiril Isakov",email = "kirix.isakov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
