[project]
name = "oc-stackoverflow-api"
version = "0.1.0"
description = "L'API HTTP sous FastAPI pour mon projet OpenClassrooms «Étiquetage des questions Stackoverflow»"
authors = [
    {name = "Kiril Isakov",email = "kirix.isakov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"


[dependency-groups]
jupyter-notebook = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
]
api = [
    "aiohttp (>=3.13.2,<4.0.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]
data-science = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]
all = [
    {include-group = "jupyter-notebook"},
    {include-group = "api"},
    {include-group = "data-science"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
