[project]
name = "oc-stackoverflow-api"
version = "0.1.0"
description = "L'API HTTP sous FastAPI pour mon projet OpenClassrooms «Étiquetage des questions Stackoverflow»"
authors = [
    {name = "Kiril Isakov",email = "kirix.isakov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"


[dependency-groups]
jupyter-notebook = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "ipython (>=9.10.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
]
api = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "fastapi (>=0.131.0,<0.132.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]
data-science = [
    "gensim (>=4.4.0,<5.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.10.0,<3.0.0)",
    "transformers (>=5.1.0,<6.0.0)",
]
mlops = [
    "mlflow (>=3.10.0,<4.0.0)",
    "wandb (>=0.25.0,<0.26.0)"
]
misc = [
    "tqdm (>=4.67.3,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pytz (>=2025.2,<2026.0)"
]
all = [
    {include-group = "jupyter-notebook"},
    {include-group = "api"},
    {include-group = "data-science"},
    {include-group = "mlops"},
    {include-group = "misc"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
